# GW2Nexus-WhatRoleAmIPlaying

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  README.md
.github/: README.md  nexus-release.json
.github/workflows/: release.yml
cmake/: GenerateAddonMetadata.cmake
docs/: AGENT_BLISH_TO_NEXUS_PORT.md
scripts/: build-release.sh  deploy-to-gw2.sh  generate_addon_metadata.py
src/: entry.cpp
src/core/: AppState.cpp  AppState.h  Branding.h  MumbleUtils.cpp  MumbleUtils.h  SettingsStore.cpp  SettingsStore.h
src/data/: RoleConfigJson.cpp  RoleConfigJson.h  RoleModels.cpp  RoleModels.h
src/services/: HttpClient.cpp  HttpClient.h  RoleConfigLoader.cpp  RoleConfigLoader.h  RoleConfigService.cpp  RoleConfigService.h  RoleSelectionService.cpp  RoleSelectionService.h
src/ui/: DatAssetIconService.cpp  DatAssetIconService.h  MainWindow.cpp  MainWindow.h  OptionsPanel.cpp  OptionsPanel.h  QuickAccessService.cpp  QuickAccessService.h
